<resources>
    <string name="app_name">Ehcc Acknowledge</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="activating_actualizing_god_s_royalty_in_you"><![CDATA[…activating & actualizing God’s royalty in you]]></string>
    <string name="logo">Logo</string>
    <string name="account_login">Account Login</string>
    <string name="acK">Acknowledgement Info</string>
    <string name="username">Username</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="To">To</string>
    <string name="password">Password</string>
    <string name="contact">Recent Activities</string>
    <string name="member">Members</string>
    <string name="_99_new">99+ new</string>
    <string name="initials">A</string>
    <string name="login">Login</string>
    <string name="add_new_member">Add New Member</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="add_to_list">Add to List</string>
    <string name="cancel_icon">Cancel Icon</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="amount">Amount</string>
    <string name="name_history">Adeniran Opeyemi</string>
    <string name="history">History</string>
    <string name="send_mail">Send Mail</string>
    <string name="members">Members</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="tithe">Tithe</string>
    <string name="offering">Offering</string>
    <string name="seed">Seed</string>
    <string name="project">Others</string>
    <string name="choose_category">Choose Category</string>
    <string name="total">Total :</string>
    <string name="add_category">Add Category</string>
    <string name="save">Save</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="send_mailer">Send Mail</string>
    <string-array name="category_array">
        <item>Select Category</item>
        <item>Tithe</item>
        <item>Offering</item>
        <item>Seed</item>
        <item>Project</item>
    </string-array>

</resources>
