<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="android.view.View" />
        <variable
            name="mailModel"
            type="com.katana.koin.ui.send_mail.MailViewModel"/>
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.send_mail.MailActivity">
            <ImageView
                android:id="@+id/back_icon"
                android:layout_width="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="24dp"
                android:onClick="onBackClicked"
                android:layout_marginTop="20dp"
                android:src="@drawable/ic_keyboard_backspace_black_48dp"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/raleway_medium"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/acK"
                android:textColor="@android:color/black" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/MyOutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nameEditText"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:drawableEnd="@drawable/ic_person"
                    android:hint="@string/name"
                    android:padding="13dp"
                    android:fontFamily="@font/raleway_medium"
                    android:inputType="text"
                    android:textCursorDrawable= "@null" >
                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                style="@style/MyOutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/messageEditText"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:hint="@string/message"
                    android:padding="13dp"
                    android:lines="8"
                    android:minLines="6"
                    android:gravity="top|left"
                    android:maxLines="10"
                    android:fontFamily="@font/raleway_medium"
                    android:inputType="textMultiLine"
                    android:textCursorDrawable= "@null" >
                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:text="@string/choose_category"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:padding="5dp"
                android:textColor="@android:color/black"
                android:gravity="center"
                android:textStyle="bold"
                android:fontFamily="@font/raleway_medium"
                android:textSize="16sp"
                android:layout_height="wrap_content"/>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_height="fill_parent">
                <CheckBox android:id="@+id/checkbox_tithe"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tithe"
                    android:onClick="onCheckboxClicked"/>
                <CheckBox android:id="@+id/checkbox_offering"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/offering"
                    android:onClick="onCheckboxClicked"/>
                <CheckBox android:id="@+id/checkbox_seed"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/seed"
                    android:onClick="onCheckboxClicked"/>
                <CheckBox android:id="@+id/checkbox_project"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/project"
                    android:onClick="onCheckboxClicked"/>
            </LinearLayout>
            <TextView
                android:id="@+id/totalEditText"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:text="@string/total"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:padding="5dp"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:fontFamily="@font/raleway_medium"
                android:textSize="20sp"
                android:layout_height="wrap_content"/>

            <Button
                android:layout_width="match_parent"
                android:text="@string/send_mailer"
                android:textAllCaps="false"
                android:layout_margin="25dp"
                android:onClick="sendMail"
                android:textColor="@android:color/background_light"
                android:background="@drawable/rounded_btn"
                android:bottomRightRadius="10dp"
                android:bottomLeftRadius="10dp"
                android:fontFamily="@font/raleway_medium"
                android:topLeftRadius="20dp"
                android:topRightRadius="10dp"
                android:layout_height="60dp">

            </Button>
        </LinearLayout>
        <androidx.core.widget.ContentLoadingProgressBar
            android:id="@+id/address_looking_up"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="@{mailModel.isLoading ? View.VISIBLE : View.GONE}" />
        </FrameLayout>
    </ScrollView>
</layout>