<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/category_title"
        android:layout_width="match_parent"
        android:text="@string/tithe"
        android:gravity="start"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="30dp"
        android:textColor="@android:color/black"
        android:fontFamily="@font/raleway_medium"
        android:textSize="20sp"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/categoryAmountEditText"
        android:layout_width="match_parent"
        android:hint="@string/enter_amount"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:padding="15dp"
        android:textColor="@android:color/black"
        android:fontFamily="@font/raleway_medium"
        android:background="@drawable/input_shadow"
        android:layout_height="wrap_content"
        android:inputType="phone" />

    <Button
        android:id="@+id/saveToListBtn"
        android:layout_width="130dp"
        android:text="@string/save"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="20dp"
        android:textColor="@android:color/background_light"
        android:background="@drawable/rounded_btn"
        android:bottomRightRadius="10dp"
        android:bottomLeftRadius="10dp"
        android:fontFamily="@font/raleway_medium"
        android:topLeftRadius="20dp"
        android:topRightRadius="10dp"
        android:layout_marginBottom="20dp"
        android:layout_height="65dp"/>

</LinearLayout>