<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
xmlns:app="http://schemas.android.com/apk/res-auto">
<data>
    <variable
        name="loginModel"
        type="com.katana.koin.ui.login.LoginViewModel"/>
</data>

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">
    <ImageView
        android:layout_width="match_parent"
        android:src="@drawable/ic_ehcc"
        android:layout_marginTop="80dp"
        android:layout_height="120dp"
        android:contentDescription="@string/logo" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/raleway_medium"
        android:gravity="center"
        android:textSize="20dp"
        android:textStyle="bold"
        android:text="@string/account_login"
        android:textColor="@android:color/black" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/MyOutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/usernameEditText"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:drawableEnd="@drawable/ic_person"
            android:hint="@string/username"
            android:padding="13dp"
            android:fontFamily="@font/raleway_medium"
            android:inputType="textPersonName"
            android:textColor="@color/colorPrimary"
            android:textCursorDrawable= "@null" >
        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        style="@style/MyOutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordEditText"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:drawableEnd="@drawable/ic_key"
            android:hint="@string/password"
            android:padding="13dp"
            android:fontFamily="@font/raleway_medium"
            android:inputType="textPassword"
            android:textColor="@color/colorPrimary"
            android:textCursorDrawable= "@null" >
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="match_parent"
        android:text="@string/login"
        android:textAllCaps="false"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:onClick="@{() -> loginModel.onLoginClick()}"
        android:textColor="@android:color/background_light"
        android:background="@drawable/rounded_btn"
        android:bottomRightRadius="10dp"
        android:bottomLeftRadius="10dp"
        android:fontFamily="@font/raleway_medium"
        android:topLeftRadius="20dp"
        android:topRightRadius="10dp"
        android:layout_height="60dp">

    </Button>
</LinearLayout>
</layout>